fix: 修复 workflow 不装 nuitka 的问题

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
       shell: pwsh
       run: |
         $ProgressPreference = 'SilentlyContinue'
+        pip install nuitka
         .\build.ps1 -Version "${{ steps.set-version.outputs.version }}"
 
     - name: Upload Artifacts
