--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       shell: pwsh
       run: |
         $version = "${{ steps.set-version.outputs.version }}"
-        Compress-Archive -Path .\build\app.dist -DestinationPath ".\build\WelearnBrainBurst-$version.zip"
+        Compress-Archive -Path .\build\app.dist\* -DestinationPath ".\build\WelearnBrainBurst-$version.zip"
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
