fix: 修复了 Linux 下编译脚本中对错误的文件名进行验证导致的验证错误

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set up environment for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          choco install python --yes
+          choco install python312 --yes
           python -m ensurepip
           echo "Environment setup complete."
 
